[workspace]
resolver = "2"
members = ["crates/*", "bin/rxrpl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal
rxrpl-primitives = { path = "crates/primitives" }
rxrpl-crypto = { path = "crates/crypto" }
rxrpl-codec = { path = "crates/codec" }
rxrpl-rpc-api = { path = "crates/rpc-api" }
rxrpl-protocol = { path = "crates/protocol" }
rxrpl-rpc-client = { path = "crates/rpc-client" }
rxrpl = { path = "crates/rxrpl" }
rxrpl-amount = { path = "crates/amount" }
rxrpl-shamap = { path = "crates/shamap" }
rxrpl-ledger = { path = "crates/ledger" }
rxrpl-storage = { path = "crates/storage" }
rxrpl-nodestore = { path = "crates/nodestore" }
rxrpl-amendment = { path = "crates/amendment" }
rxrpl-tx-engine = { path = "crates/tx-engine" }
rxrpl-txq = { path = "crates/txq" }
rxrpl-consensus = { path = "crates/consensus" }
rxrpl-config = { path = "crates/config" }
rxrpl-p2p-proto = { path = "crates/p2p-proto" }
rxrpl-overlay = { path = "crates/overlay" }
rxrpl-rpc-server = { path = "crates/rpc-server" }
rxrpl-node = { path = "crates/node" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
k256 = { version = "0.13", features = ["ecdsa-core", "sha256"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
bs58 = "0.5"

# Async / Networking
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
rocksdb = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
lru = "0.12"

# Misc
hex = "0.4"
bytes = "1"
once_cell = "1"
derive_more = { version = "1", features = ["display", "from", "into", "deref", "as_ref"] }
