[package]
name = "rxrpl-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rxrpl-codec = { path = "../crates/codec" }
rxrpl-shamap = { path = "../crates/shamap" }
rxrpl-primitives = { path = "../crates/primitives" }
rxrpl-p2p-proto = { path = "../crates/p2p-proto" }
rxrpl-rpc-server = { path = "../crates/rpc-server" }
rxrpl-config = { path = "../crates/config" }
serde_json = "1"
arbitrary = { version = "1", features = ["derive"] }
prost = "0.13"
tokio = { version = "1", features = ["rt", "macros"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

[[bin]]
name = "binary_parser"
path = "fuzz_targets/binary_parser.rs"
doc = false

[[bin]]
name = "binary_roundtrip"
path = "fuzz_targets/binary_roundtrip.rs"
doc = false

[[bin]]
name = "rpc_dispatch"
path = "fuzz_targets/rpc_dispatch.rs"
doc = false

[[bin]]
name = "p2p_codec"
path = "fuzz_targets/p2p_codec.rs"
doc = false

[[bin]]
name = "transaction_deser"
path = "fuzz_targets/transaction_deser.rs"
doc = false

[[bin]]
name = "shamap_ops"
path = "fuzz_targets/shamap_ops.rs"
doc = false
