[package]
name = "rxrpl-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
ripemd = { workspace = true }
