[package]
name = "rxrpl-config"
description = "XRPL node configuration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-amendment = { workspace = true }
rxrpl-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
toml = "0.8"
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
