[package]
name = "rxrpl-ledger"
description = "XRPL ledger state management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-shamap = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
