[package]
name = "rxrpl-node"
description = "XRPL validator node orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
grpc = ["dep:rxrpl-grpc-server"]

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-config = { workspace = true }
rxrpl-codec = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-protocol = { workspace = true }
rxrpl-ledger = { workspace = true }
rxrpl-tx-engine = { workspace = true }
rxrpl-txq = { workspace = true }
rxrpl-consensus = { workspace = true }
rxrpl-overlay = { workspace = true }
rxrpl-p2p-proto = { workspace = true }
rxrpl-rpc-server = { workspace = true }
rxrpl-amendment = { workspace = true }
rxrpl-storage = { workspace = true, features = ["sqlite"] }
rxrpl-nodestore = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
hex.workspace = true
axum = { version = "0.8", features = ["ws"] }
metrics = { workspace = true }
rxrpl-grpc-server = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
