[package]
name = "rxrpl-nodestore"
description = "XRPL-aware node storage with LRU caching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-shamap = { workspace = true }
rxrpl-storage = { workspace = true }
thiserror.workspace = true
lru.workspace = true
