[package]
name = "rxrpl-overlay"
description = "XRPL P2P overlay network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-p2p-proto = { workspace = true }
rxrpl-config = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap = "6"
lru.workspace = true
