[package]
name = "rxrpl-overlay"
description = "XRPL P2P overlay network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-p2p-proto = { workspace = true }
rxrpl-consensus = { workspace = true }
rxrpl-config = { workspace = true }
rxrpl-ledger = { workspace = true }
rxrpl-shamap = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
prost = "0.13"
tracing.workspace = true
thiserror.workspace = true
dashmap = "6"
lru.workspace = true
hex.workspace = true
serde_json = { workspace = true }
