[package]
name = "rxrpl-overlay"
description = "XRPL P2P overlay network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-p2p-proto = { workspace = true }
rxrpl-consensus = { workspace = true }
rxrpl-config = { workspace = true }
rxrpl-ledger = { workspace = true }
rxrpl-nodestore = { workspace = true }
rxrpl-shamap = { workspace = true }
rxrpl-codec = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
openssl = { workspace = true }
tokio-openssl = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
prost = "0.13"
tracing.workspace = true
thiserror.workspace = true
dashmap = "6"
lru.workspace = true
hex.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
