[package]
name = "rxrpl-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "XRPL protocol types: transactions, ledger entries, flags, keylets, and signing"

[features]
client = ["dep:rxrpl-rpc-client", "dep:tokio"]

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-codec = { workspace = true }
rxrpl-rpc-client = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
