[package]
name = "rxrpl-rpc-server"
description = "XRPL JSON-RPC and WebSocket server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-rpc-api = { workspace = true }
rxrpl-ledger = { workspace = true }
rxrpl-config = { workspace = true }
rxrpl-tx-engine = { workspace = true }
rxrpl-amendment = { workspace = true }
rxrpl-codec = { workspace = true }
rxrpl-protocol = { workspace = true }
rxrpl-storage = { workspace = true, features = ["sqlite"] }
rxrpl-txq = { workspace = true }
rxrpl-crypto = { workspace = true }
rxrpl-pathfind = { workspace = true }
rxrpl-nodestore = { workspace = true }
rand = "0.8"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
base64 = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
reqwest = { workspace = true }
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "6"
once_cell = "1"

[dev-dependencies]
tokio = { workspace = true }
