[package]
name = "rxrpl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "XRPL SDK for Rust"

[features]
default = ["protocol", "codec", "crypto"]
full = ["protocol", "codec", "crypto", "rpc", "client"]
crypto = ["dep:rxrpl-crypto"]
codec = ["dep:rxrpl-codec"]
protocol = ["dep:rxrpl-protocol", "crypto", "codec"]
rpc = ["dep:rxrpl-rpc-api"]
client = ["dep:rxrpl-rpc-client", "rpc", "protocol"]
autofill = ["client", "rxrpl-protocol/client"]

[dependencies]
rxrpl-primitives = { workspace = true }
rxrpl-crypto = { workspace = true, optional = true }
rxrpl-codec = { workspace = true, optional = true }
rxrpl-rpc-api = { workspace = true, optional = true }
rxrpl-protocol = { workspace = true, optional = true }
rxrpl-rpc-client = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "generate_wallet"
required-features = ["protocol"]

[[example]]
name = "send_payment"
required-features = ["client", "autofill"]

[[example]]
name = "subscribe_ledger"
required-features = ["client"]

[[example]]
name = "decode_address"
required-features = ["codec"]
