[package]
name = "rxrpl-storage"
description = "Key-value store abstraction with pluggable backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
rocksdb = ["dep:rocksdb"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx", "dep:tokio"]

[dependencies]
thiserror.workspace = true

rocksdb = { version = "0.22", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
tokio = { workspace = true, optional = true }
